Se crea la nueva función de expedición de cancelaciones (se debe ajustar) y se agregan nuevos servicios
